# embedded_playground

./: .gitignore  LICENSE
aero-front-tester/: Cargo.toml
aero-front-tester/src/: main.rs
aerotemp-f1-rtic/: Cargo.toml  openocd.cfg  openocd.gdb
aerotemp-f1-rtic-2/: Cargo.toml  Readme.md  memory.x  openocd.gdb
aerotemp-f1-rtic-2/.cargo/: config
aerotemp-f1-rtic-2/assets/: logo_groppo_aviazione_124x124.tga  logo_groppo_aviazione_128x128.tga
aerotemp-f1-rtic-2/src/: button.rs  hist.rs  main.rs  screen.rs  temp.rs  types.rs  unit.rs
aerotemp-f1-rtic/.cargo/: config
aerotemp-f1-rtic/assets/: pegaso_avionics.tga
aerotemp-f1-rtic/src/: main.rs  temps.rs  types.rs
button_rtic/: Cargo.toml
button_rtic/src/: main.rs
can/: Cargo.toml
can/src/: main.rs
rtc/: Cargo.toml  memory.x
rtc/src/: main.rs
thirsty/: Cargo.toml  openocd.gdb
thirsty/src/: main.rs  sensors.rs  types.rs
