[package]
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"
readme = "README.md"
name = "aero-front-tester"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
panic-halt = "0.2.0"
stm32f1xx-hal = { version = "0.7.0", features = ["stm32f103", "rt"] }
cortex-m-rtic = "0.5"
shared-bus = "0.2.2"
ssd1351 = "0.3.0"
embedded-graphics = "0.6.2"

panic-semihosting = { version="0.5.6", optional = true }
cortex-m-semihosting = { version="0.3.3", optional = true }

[features]
semihosting = [ "cortex-m-semihosting", "panic-semihosting" ]

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]


[[bin]]
name = "aero-front-tester"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
