[package]
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"
readme = "README.md"
name = "aerotemp-f1-rtic-2"
version = "0.1.0"

[dependencies]
# cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
embedded-hal = { features = ["unproven"], version = "0.2.7" }
stm32f1xx-hal = { version = "0.9.0", features = ["stm32f103", "rtic"] }
systick-monotonic = "1.0.0"
cortex-m-rtic = "1.0.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

[[bin]]
name = "aerotemp-f1-rtic-2"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
