[package]
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2021"
readme = "README.md"
name = "aerotemp-f1-rtic-2"
version = "0.1.0"

[dependencies]
embedded-hal = { features = ["unproven"], version = "0.2.7" }
stm32f1xx-hal = { version = "0.9.0", features = ["stm32f103", "rtic"] }
systick-monotonic = "1.0.0"
cortex-m-rtic = "1.0.0"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
defmt = "0.3.0"
defmt-rtt = "0.3.1"
e-ring = { version = "0.3.0", features = ["hist"] }
ssd1351 = "0.4.0"
embedded-graphics = "0.7.1"
tinytga = "0.4.1"
heapless = "0.7.10"

[[bin]]
name = "aerotemp-f1-rtic-2"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
# opt-level = 'z' # optimize for space if over 64k

[profile.dev]
opt-level = 'z'
