[package]
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"
readme = "README.md"
name = "aerotemp-f1-rtic"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
panic-halt = "0.2.0"
stm32f1xx-hal = { version = "0.7.0", features = ["stm32f103", "rt"] }
cortex-m-rtic = "0.5"
shared-bus-rtic = "0.2.2"
ssd1351 = "0.4.0"
embedded-graphics = "0.7.1"
max31865 = "0.1.1"
e-write-buffer = "0.5.0"
e-ring = { version = "0.3.0", features = ["hist"] }
tinytga = "0.4.1"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]


[[bin]]
name = "aerotemp-f1-rtic"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[profile.dev]
opt-level = 'z'
