[package]
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"
readme = "README.md"
name = "button_rtic"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.5.6"
panic-halt = "0.2.0"
stm32f1xx-hal = { version = "0.7.0", features = ["stm32f103", "rt", "medium"] }
cortex-m-rtic = "0.5"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
