[package]
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"
readme = "README.md"
name = "can"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.5.6"
panic-halt = "0.2.0"
stm32f1xx-hal = { version = "0.7.0", features = ["stm32f103"] }
bxcan = "0.4.0"
nb = "0.1.2"


[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[features]
sender = []

[[bin]]
name = "can"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[patch.crates-io]
stm32f1xx-hal = { git ="https://github.com/stm32-rs/stm32f1xx-hal", branch="master", features = [ "stm32f103", "has-can"] }