[package]
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"
readme = "README.md"
name = "thirsty"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
stm32f1xx-hal = { version = "0.7.0", features = ["stm32f103"] }
dht-sensor = "0.2.1"
embedded-hal = "0.2.3"
ssd1306 = "0.5.2"
embedded-graphics = "0.6.2"
e-write-buffer = "0.5.0"
e-ring = { git = "https://github.com/RCasatta/e-ring", rev = "1d577e5fff5e2704a7b9c83f9a3c947d6fe3b55f",  features = ["hist"] }

[features]
default = []

# this lets you use `cargo fix`!
[[bin]]
name = "thirsty"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
